# UAV-Master-Hub-Fortress

./: .gitignore  CTO_UI_DASHBOARD_BLUEPRINT.md  README.md  force_build.sh  launch_fortress_demo.sh
SUBMISSION_PACKAGE_MARCH_2026/: COMPLETION_VOUCHER_FORTRESS_V4.md  GOLDEN_RUN_PDCA_RESULTS.md  MANIFEST_CHECKSUM_FREEZE.txt  PHD_FINAL_CHECKLIST.yaml  PHD_MASTER_PRESENTATION.tex  SYSTEM_HEALTH_AUDIT.md  dimension10_publications_defense.md  dimension1_ai_ml_systems.md  dimension2_robotics_framework.md  dimension4_path_planning_analysis.md  dimension6_environmental_sustainability.md  dimension7_completion.md  executive_summary.md  latency_analysis.md  submission_voucher.md  viva_voce_prep.md
assets/: README.md
docker/: Dockerfile.golden  README.md  docker-compose.golden.yml  docker-compose.yml
projects/: README.md
projects/thermal_hexacopter/src/agri_msgs/: CMakeLists.txt  package.xml
projects/thermal_hexacopter/src/agri_msgs/msg/: PlantHealthStatus.msg  SprayCommand.msg
reports/: DEFENSE_PRESENTATION.md  ELI5_PHD_SUMMARY.md  FINAL_SUPERVISOR_PRESENTATION.md  HITL_FUNDING_PPT_OUTLINE.md  INDRA_EYE_SETUP.md  LITERATURE_REVIEW.md  MIGRATION_EXECUTE.sh  OUTCOME_APPLICATIONS.md  PHD_FINAL_CHECKLIST.yaml  PHD_MARATHON_SUMMARY.md  PHD_MASTER_PRESENTATION.tex  PHD_SUBMISSION_EMAIL.md  PROJECTS_EXPLAINED.md  PROJECT_ELI5.md  QGC_MANUAL_DEMO_GUIDE.md  README.md  SUCCESS_PHASE_2  SUPERVISOR_QA.md  WEEKEND_LEARNING_GUIDE.md  dimension1_ai_ml_systems.md  dimension2_execution_guide.md  dimension2_methodology_navigation.md  dimension3_field_trial_protocol.md  economic_model.csv  (+7 more)
(+91 files in other folders)
