<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agri_msgs</name>
  <version>1.0.0</version>
  <description>
    Custom ROS 2 message definitions for the 5-Layer Autonomous Agricultural UAV System.
    Provides PlantHealthStatus (V2 thermal anomaly reports) and SprayCommand (V3 sprayer control).
  </description>
  <maintainer email="abhishek@todo.todo">Abhishek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
